@@ -14,6 +14,11 @@ group that did capture something were not being correctly returned as "unset"
 groups altogether. Now it shows those that come before any actual captures as
 "<unset>", as happens for non-POSIX matching.
 
+3. Running "pcre2test -C" always stated "\R matches CR, LF, or CRLF only", 
+whatever the build configuration was. It now correctly says "\R matches all 
+Unicode newlines" in the default case when --enable-bsr-anycrlf has not been 
+specified.
+
 
 Version 10.31 12-February-2018
 ------------------------------
